# nexkara_canvas

./: .env.example  .gitignore  Caddyfile  Caddyfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_dashboard.py  0003_comments.py  0004_invites.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: account.py  auth.py  notifications.py  prototypes.py  sandbox.py  users_admin.py  viewer.py  ws.py
backend/app/core/: authz.py  config.py  rate_limit.py  rbac.py  rbac_model.conf  rbac_policy.csv  redis.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  comment.py  notification.py  prototype.py  user.py
backend/app/schemas/: auth.py  dashboard.py  viewer.py
backend/app/services/: auth_service.py  comment_service.py  mail_service.py  notification_service.py  otp_service.py  prototype_service.py  storage_service.py  thumbnail_service.py
backend/app/ws/: rooms.py
backend/tests/: conftest.py  test_auth.py  test_prototypes.py  test_users_admin.py  test_viewer.py
docs/: deployment.md
docs/plans/: 01-auth.md  02-dashboard.md  03-viewer.md
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: api.ts  format.ts  types.ts
frontend/store/: useAuthFlow.ts  useDashboard.ts  useToast.ts  useViewer.ts
(+45 files in other folders)
